--- a/pages/sensor-types.html
+++ b/pages/sensor-types.html
@@ -6,16 +6,6 @@
     <div class="col-auto">
         <div class="page-utilities">
             <div class="row g-2 justify-content-start justify-content-md-end align-items-center">
-                <div class="col-auto">
-                    <form class="table-search-form row gx-1 align-items-center" id="search-form">
-                        <div class="col-auto">
-                            <input type="text" id="search-sensor-types" name="searchsensortypes" class="form-control search-orders" placeholder="Buscar tipo de sensor">
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" class="btn app-btn-secondary">Buscar</button>
-                        </div>
-                    </form>
-                </div>
 
                 <div class="col-auto">
                     <select class="form-select w-auto" id="filter-estado">
@@ -43,7 +33,7 @@
                         <th class="cell">Modelo</th>
                         <th class="cell">Descripción</th>
                         <th class="cell">Estado</th>
-                        <th class="cell">Acciones</th>
+                        <th class="cell accion">Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="sensor-types-table-body">
