--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Portal - Bootstrap 5 Admin Dashboard Template For Developers</title>
+    <title>Avisena</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
 	    <div class="col-12 col-md-7 col-lg-6 auth-main-col text-center p-5 d-flex justify-content-center align-items-center">
 		    <div class="d-flex flex-column align-content-end">
 			    <div class="app-auth-body mx-auto ">	
-				    <div class="app-auth-branding mb-4"><a class="app-logo" href="#"><img class="logo-icon me-2" src="assets/images/logo.png" alt="logo"></a></div>
+				    <div class="app-auth-branding mb-4"><a class="app-logo" ><img class="logo-icon me-2" src="assets/images/logo.png" alt="logo"></a></div>
 					<h2 class="auth-heading text-center mb-5">Avisena</h2>
 			        <div class="auth-form-container text-start">
 						<form class="auth-form login-form">         
